# net-marshalling

./: .gitmodules  CMakeLists.txt
docs/: examples.md  page_define_prot.dox  page_field.dox  page_prot_stack.dox  page_use_prot.dox
include/nil/network/marshalling/: alloc.hpp  empty_handler.hpp  generic_handler.hpp  generic_message.hpp  message.hpp  message_base.hpp  msg_factory.hpp  options.hpp  type_traits.hpp  units.hpp  units_types.hpp
include/nil/network/marshalling/detail/: base_detection.hpp  bits_access.hpp  field_base.hpp  fields_access.hpp  gen_enum.hpp  macro_common.hpp  protocol_layers_access.hpp  reverse_macro_args.hpp  transport_fields_access.hpp  variant_access.hpp
include/nil/network/marshalling/detail/message/: implementation_builder.hpp  implementation_options_parser.hpp  interface_builder.hpp  interface_options_parser.hpp
include/nil/network/marshalling/detail/msg_factory/: base.hpp  bin_search_base.hpp  direct.hpp  generic.hpp  options_parser.hpp  selector.hpp  uniq.hpp
include/nil/network/marshalling/protocol/: checksum_layer.hpp  checksum_prefix_layer.hpp  msg_data_layer.hpp  msg_id_layer.hpp  msg_size_layer.hpp  protocol_layer_base.hpp  sync_prefix_layer.hpp  transport_value_layer.hpp  type_traits.hpp
include/nil/network/marshalling/protocol/checksum/: basic_sum.hpp  crc.hpp
include/nil/network/marshalling/protocol/detail/: checksum_layer_options_parser.hpp  protocol_layer_base_options_parser.hpp  transport_value_layer_adapter.hpp  transport_value_layer_options_parser.hpp
include/nil/network/marshalling/type/: ethernet.hpp
test/: CMakeLists.txt  checksum_layer.cpp  checksum_prefix_layer.cpp  message.cpp  msg_data_layer.cpp  msg_id_layer.cpp  msg_size_layer.cpp  sync_prefix_layer.cpp  test_common.hpp  transport_value_layer.cpp
